--- a/register/Stylesheet.html
+++ b/register/Stylesheet.html
@@ -1,3 +1,63 @@
 <style>
+  body {
+    background-image: url("https://mpdw-mail-resources.s3.ap-southeast-1.amazonaws.com/lucky-bg.jpg");
+    /* Full height */
+    height: 100%;
 
+    /* Center and scale the image nicely */
+    background-position: top -100px right 50%;
+    background-repeat: repeat;
+    background-size: cover;
+
+    /* front-color */
+    color: #a91d1f;
+  }
+
+  body h1 {
+    font-size: 28px;
+  }
+
+  .ticket {
+    width: 900px !important;
+    height: 250px !important;
+
+    border: 0px solid #02012b;
+    background-image: linear-gradient(180deg, #fbdea7, #facb5b);
+  }
+
+  #gong-xi-fa-cai {
+    width: 100px;
+  }
+
+  #front-img {
+    width: 322px;
+    border-radius: 4px;
+  }
+
+  #ticket-details {
+    position: absolute;
+    top: 10%;
+    left: 18%;
+  }
+
+  #lucky-cover {
+    width: 800px;
+  }
+
+  #ticket-back {
+    color: #fae59f;
+  }
+
+  #ticket-rule-container {
+    width: 800px;
+    height: 250px;
+
+    background-image: linear-gradient(
+      to right,
+      #ba141f,
+      #db1215,
+      #ce141a,
+      #b01d20
+    );
+  }
 </style>
