--- a/draw/Index.html
+++ b/draw/Index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base target="_top">
+    <base target="_top" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,14 +21,67 @@
   <body>
     <?!= include('Stylesheet'); ?>
     <?!= include('Confetti'); ?>
-    <?!= include('Script'); ?>
-    <div>
-    <?
-      var individuals = fetchParticipants();
-      for (var i = 0; i < individuals.length; i++) { ?>
-      <p><?!= individuals[i].id + ': ' + individuals[i].username ?></p>
-      <br/>
-    <? } ?>
+
+    <div class="main row">
+      <div class="col-8">
+        <div id="app">
+          <div class="doors">
+            <div class="door">
+              <div class="rotate">
+                <div class="ring"></div>
+              </div>
+            </div>
+
+            <div class="door">
+              <div class="rotate">
+                <div class="ring"></div>
+              </div>
+            </div>
+
+            <div class="door">
+              <div class="rotate">
+                <div class="ring"></div>
+              </div>
+            </div>
+
+            <div class="door">
+              <div class="rotate">
+                <div class="ring"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="buttons">
+            <button id="stop">Stop</button>
+            <button id="start">Start</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 d-flex flex-column">
+        <strong class="mt-4">Lucky Draw Progress</strong>
+        <div class="progress mt-1">
+          <div
+            id="lucky-progress"
+            class="progress-bar progress-bar-striped progress-bar-animated bg-info"
+            role="progressbar"
+            aria-valuenow="75"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            style="width: 0%"
+          >
+            0%
+          </div>
+        </div>
+        <div id="winners-container" class="d-flex flex-column mt-3"></div>
+      </div>
     </div>
+    <? 
+      var individuals = fetchParticipants(); 
+      for (var i = 0; i < individuals.length; i++) { ?>
+      <div style="display:none" class="participants">
+      <?!= JSON.stringify(individuals[i]); ?>
+      </div>
+    <? } ?>
+    <?!= include('Script'); ?>
   </body>
 </html>
